# Self-study_project

./: .flake8  README.md  pyproject.toml  pytest.ini
config/: settings.py  urls.py
courses/: admin.py  models.py  serializers.py  views.py
courses/migrations/: 0001_initial.py
docs/: openapi.yaml
tests/: conftest.py  test_auth.py  test_courses.py  test_materials.py  test_permissions.py  test_questions_answers.py  test_sections.py  test_submit.py
users/: models.py  permissions.py  serializers.py  views.py
users/management/commands/: seed_data.py
users/migrations/: 0001_initial.py
