[tool.poetry]
name = "self-study-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.28.0"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"
python-dotenv = "^1.1.1"
pytest = "^8.4.1"
pytest-django = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
